# gf3d-server

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml  server.py
src/gf3d-server/: server.py
src/gf3d_server/: server.py  version.py
src/gf3dserver/: __init__.py  __main__.py  server.py
