[project]
name = "gf3dserver"
description = "Server interface to the GF database"
readme = "README.md"
authors = [
    { name = "Lucas Sawade", email = "lsawade@princeton.edu" }
]
license = { text = "BSD 3-Clause License" }
dependencies = [
    "gf3d",
    "flask",
    "waitress"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/lsawade/gf3dserver"

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "src/gf3dserver/version.py"

[tool.setuptools.packages.find]
where = ["src"]